ignore .DS_Store

--- a/wazo/plugin.yml
+++ b/wazo/plugin.yml
@@ -1,7 +1,7 @@
 name: workno-fa-sounds-plugin
 namespace: workano
 version: 1.0.0
-author: Milad Razban
+author: Workano Team - Milad Razban
 display_name: workano-sound-plugins
 description: This plugin install sounds for connectino-sound-plugins
 homepage: https://workano.com
