--- a/wazo/plugin.yml
+++ b/wazo/plugin.yml
@@ -1,4 +1,4 @@
-name: workno-fa-sounds-plugin
+name: workano-fa-sounds-plugin
 namespace: workano
 version: 1.0.0
 author: Workano Team - Milad Razban
